Fixed IE8 overflow issue

--- a/phpmyfaq/admin/style/admin.css
+++ b/phpmyfaq/admin/style/admin.css
@@ -184,9 +184,10 @@ code {
     color: #fff; }
 
 /* Navigation */
+.i8 nav {
+    position: absolute; left: 0; top: 108px; width: 100%; background: url(../images/nav_background.png); }
 nav {
-    position: absolute; left: 0; top: 108px; width: 100%; height: 44px; overflow: hidden;
-    background: url(../images/nav_background.png); }
+    position: absolute; left: 0; top: 108px; width: 100%; overflow: hidden; background: url(../images/nav_background.png); }
 nav ul {
     margin: 0 auto; width: 980px; list-style: none; }
 nav ul li {
